# PDFRead

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
