[project]
name = "pdf-574"
version = "0.1.0"
description = ""
authors = [
    {name = "moten",email = "moten_07\\@163.com"}
]
requires-python = ">=3.14,<4.0"
dependencies = [
    "pdfplumber == 0.11.9",
    "pdfminer.six == 20251230"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
